Enhance knowledge base document handling by adding public URLs and types for various documents, update parsing logic to include these attributes, and modify context formatting in the Gemini service to display source information. Update prompt instructions for citing sources with Markdown format. Additionally, update .gitignore to exclude new build directories.

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
-    "build": "next build",
+    "dev": "bun run prepare-kb-documents && next dev",
+    "build": "bun run prepare-kb-documents && next build",
     "start": "next start",
     "lint": "next lint",
+    "prepare-kb-documents": "mkdir -p public/kb-documents && rsync -a --include='*/' --include='*.pdf' --exclude='*' knowledge-base/documents/ public/kb-documents/",
     "fetch-politicians": "cd commands && bun install && bun run fetch-politicians",
     "extract-parties": "cd commands && bun install && bun run extract-parties",
     "test-fetch-votes": "cd commands && bun install && bun run test-fetch-votes",
