--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "MyWebSite",
-  "short_name": "MySite",
+  "name": "Valkompass.ai",
+  "short_name": "Valkompass",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
