--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "rehype-sanitize": "^6.0.0",
-    "tailwind-merge": "^3.3.0",
-    "uuid": "^11.1.0"
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
