Enhance testing setup with Vitest integration, adding coverage reporting and CI workflow. Updated .gitignore to exclude test results and added new dependencies for coverage support.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test:run": "vitest run",
     "test:ui": "vitest --ui",
     "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage",
+    "test:ci": "vitest run --coverage --reporter=default --reporter=junit",
     "prepare-kb-documents": "mkdir -p public/kb-documents && (cd knowledge-base/documents && find . -type d -exec mkdir -p ../../public/kb-documents/{} \\; && find . -name \"*.pdf\" -exec cp -p {} ../../public/kb-documents/{} \\; && cd ../..)",
     "fetch-politicians": "cd commands && bun install && bun run fetch-politicians",
     "extract-parties": "cd commands && bun install && bun run extract-parties",
@@ -49,6 +51,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/coverage-v8": "^3.2.2",
     "@vitest/ui": "^3.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
