Enhance knowledge base pipeline and testing setup
- Added AI_IMPROVEMENTS.md to document critical exception handling guidelines.
- Updated CLAUDE.md with stricter exception handling rules to prevent silent failures.
- Introduced a GitHub Actions workflow for automated testing of the knowledge base.
- Refactored main.py to improve logging and error handling.
- Updated pyproject.toml to include ruff for linting and added pytest configuration.
- Enhanced README.md with setup instructions and testing guidelines.
- Added integration tests for the complete knowledge base pipeline, covering parsing, embedding, topic modeling, and graph storage.
- Improved error handling in parsers and added validation in model classes.
- Updated various modules to use list type hints and improved logging for better traceability.

--- a/knowledge-base/pyproject.toml
+++ b/knowledge-base/pyproject.toml
@@ -26,7 +26,17 @@ dependencies = [
 dev = [
     "pytest>=8.3.5",
     "pytest-asyncio>=1.0.0",
+    "ruff>=0.11.13",
 ]
 
 [tool.setuptools]
 packages = ["analysis", "documents", "graph", "model", "parser", "util", "tests"]
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests",
+]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
